# cryojax-2dtm

./: README.md  pyproject.toml
scripts/: run-2dtm.py  write-template.py
src/cryojax_2dtm/: __init__.py  _grid_search_method.py
